obsługa plików z bloba

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,35 @@ set(project_headers
   sqlite3/sqlite3ext.h)
 
 #=====================
+#..:: BOOST SETUP ::..
+#=====================
+
+# set boost includes
+set(Boost_USE_STATIC_LIBS      OFF)  # only find static libs
+set(Boost_USE_DEBUG_LIBS       ON)   # ignore debug libs and
+set(Boost_USE_RELEASE_LIBS     OFF)  # only find release libs
+set(Boost_USE_MULTITHREADED    ON)
+set(Boost_USE_STATIC_RUNTIME   OFF)
+if(UNIX)
+  set(BOOST_LIBRARYDIR         "/usr/lib64")
+elseif(MSVC)
+  set(BOOST_ROOT               "c:/Jopa/HOME/Projekty/boost/boost_1_69_0")
+endif()
+
+find_package(Boost REQUIRED COMPONENTS date_time)
+
+message("==============================================================")
+message("                        ..:: BOOST ::..                       ")
+message("==============================================================")
+message("Boost_FOUND:                ${Boost_FOUND}")
+message("Boost_VERSION:              ${Boost_VERSION}")
+message("BOOST_ROOT:                 ${BOOST_ROOT}")
+message("Boost_INCLUDE_DIRS:         ${Boost_INCLUDE_DIRS}")
+message("Boost_LIBRARY_DIRS:         ${Boost_LIBRARY_DIRS}")
+message("Boost_LIBRARIES:            ${Boost_LIBRARIES}")
+message("==============================================================")
+
+#=====================
 # ..:: Visual Studio Setup ::..
 #=====================
 
@@ -51,14 +80,17 @@ target_compile_options(${PROJECT_NAME} PRIVATE
   >
 )
 
-#target_link_libraries(${PROJECT_NAME} PRIVATE )
+target_link_libraries(${PROJECT_NAME}
+  PRIVATE
+  ${Boost_LIBRARIES})
 
 target_include_directories(${PROJECT_NAME}
   PUBLIC
   ${PROJECT_SOURCE_DIR}
   PRIVATE
   sqlite3
-  civetweb)
+  civetweb
+  ${Boost_INCLUDE_DIRS})
 
 # auto copy dlls if on windows
 if(MSVS)
